# api-tests

./: .env  .gitignore  Dockerfile  pyproject.toml  pytest.ini  settings.py
allure-results/: 000d6822-a642-4d11-8b28-b03b6a0ba387-container.json  007453f2-b9e0-44a0-a710-8a42c3a44e4e-container.json  01ed3ed9-44ab-47ef-a34c-f801c3054040-attachment.json  034ef723-475e-490f-91e7-79e835c48634-attachment.json  04a60d96-eb31-4c8d-a211-276c6ab82267-container.json  05b52ff4-c9f0-4eb2-bae6-bed15ab6109c-container.json  06786c0e-432a-48ee-ada5-93455ff31c08-result.json  0681f2cc-74e6-440d-b0c7-e5fea3341ad5-container.json  06b73140-1c7c-45cb-aeaa-31c5f5380dbb-attachment.json  071e3ead-79d8-416e-9ba5-09ddd4f8a0c7-container.json  074541ee-340d-4936-a6c1-fc5bf1709321-container.json  08a484c4-e3d9-4f25-bc40-3c7b44af5e61-attachment.json  0922fa9e-8abb-4498-8c83-3d97795fe384-container.json  09cfbdd3-7e89-4b88-a64e-02acf550c6fd-container.json  0a014c0e-5739-4249-9fd2-4b1596f39316-attachment.json  0ab6ea93-2b2d-4022-9661-1a2435a8fdf9-container.json  0c18349c-359f-45e6-a433-7c3674312305-result.json  0cec7c57-8a71-47d4-93a1-d1001c759a12-container.json  0d6f6254-3f3f-4d49-8782-883f25c10342-attachment.json  0d865733-dfc1-4c85-9932-b8fb95765998-attachment.json  0d8af0f8-1535-47ad-a9bf-005c0687539b-result.json  0dce3f9e-b154-42bb-852a-3b26e8e9b252-container.json  0f090170-94e9-4ac2-b414-f847dddcda85-result.json  0f148795-54a6-48fe-a9ae-85a7a3160a7d-result.json  0f299f95-f6e5-467d-bb41-948c0624fe2d-result.json  0f64c09b-3dfa-4c45-9a92-d0656201ba2d-attachment.json  (+402 more)
shared/: clients.py
(+21 files in other folders)
