[project]
name = "api-tests"
version = "0.1.0"
description = "API testing automation project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "faker (>=38.0.0,<39.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
